# zk

./: CMakeLists.txt  Cargo.toml  banquet.cpp  banquet.h  banquet_circuit.cpp  banquet_instances.cpp  banquet_instances.h  build.rs  field.cpp  field.h  tags  tree.cpp  types.h
lib/hashtree/: .gitignore
lib/hashtree/src/: Makefile  hashtree.c  hashtree.h  sha256_avx_x1.S  sha256_avx_x16.S  sha256_avx_x4.S  sha256_avx_x8.S  sha256_multiblk_avx_x16.S  sha256_multiblk_shani.S  sha256_shani.S
scripts/: gf_lut.py  ldt.wls
src/: app.rs  channel.rs  circuit.rs  eventfd.rs  field.rs  gkr.rs  hash.rs  ldt.rs  lib.rs  macros.rs  matmul.rs  merkle.rs  mpcvpd.rs  plainvpd.rs  plainvpd_slow.rs  poly.rs  statistic.rs  tape.rs  util.rs  vpd.rs  vpdv2.rs  zkp.rs
src/app/: aes.rs  bittest.rs  range.rs  ringsig.rs  ringsig_fold.rs  sha3mt.rs
src/field/: common.rs  coset.rs  gf2p128.rs  gf2p16.rs  gf2p192.rs  gf2p256.rs  gf2p32.rs  gf2p64.rs  gf2p8.rs  m127p2.rs  m61p2.rs  p16gf2p16.rs  p192.rs  p256.rs  p4gf2p16.rs  p4m61p2.rs  p8gf2p16.rs  vgf2p16.rs  vgf2p32.rs
tests/: benchmark.rs  find_prime.rs  ring_homomorphism.rs  test_field.rs  test_gkr.rs  test_vpd.rs  test_zk_aes.rs  test_zk_aes_vith.rs  test_zk_bittest.rs  test_zk_matmul.rs  test_zk_range.rs  test_zk_ringsig.rs  test_zk_ringsig_fold.rs  test_zk_ringsig_fold_vith.rs  test_zk_sha2mt.rs  test_zk_sha3mt.rs
tools/: bench_free.cpp  bench_group.cpp  bench_utils.cpp  bench_utils.h
